--- a/Web/views/pages/admin-muted.ejs
+++ b/Web/views/pages/admin-muted.ejs
@@ -71,7 +71,7 @@
 												<img class="image is-24x24" src="<%= muteDocument.avatar %>" alt="<%= muteDocument.id %>">
 											</td>
 											<td>
-												<%= muteDocument.name %>
+												<a href="/profile/<%= muteDocument.id %>" style="color: inherit;"><%= muteDocument.name %></a>
 											</td>
 											<td>
 												<%= muteDocument.id %>
