--- a/Web/views/pages/admin-strikes.ejs
+++ b/Web/views/pages/admin-strikes.ejs
@@ -105,7 +105,7 @@
 										<img class="image is-24x24" src="<%= strike.avatar %>" alt="<%= strike.id %>">
 									</td>
 									<td>
-										<%= strike.name %>
+										<a href="/profile/<%= strike.id %>" style="color: inherit;"><%= strike.name %></a>
 									</td>
 									<td>
 										<%= strike.id %>
